@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-09T08:13:58Z",
-  "count_outdated" : 380,
-  "uniques_outdated" : 206,
-  "count" : 408,
+  "timestamp" : "2022-07-10T01:10:22Z",
+  "count_outdated" : 382,
+  "uniques_outdated" : 207,
+  "count" : 410,
   "uniques" : 222,
   "clones" : [
-    {
-      "timestamp": "2022-06-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-26T00:00:00Z",
       "count": 1,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
